--- a/source/_posts/丢弃.md
+++ b/source/_posts/丢弃.md
@@ -9,4 +9,6 @@ tags: 思考
 
 丢弃笔记，当前纪录笔记的地方有 md 文件， github blog, 谷歌keeps, 印象笔记， 苹果备忘录。 首先减少纪录笔记的地方，在不同的设备上纪录最方便的工具不同。 所以基本要求是可以广泛纪录，但是要定时合并到同一个地方。合并的地方选择两个 github blog 和 git book.
 
-时代在改变，工具也需要改变。 不需要的**丢弃**. 
+时代在改变，工具也需要改变。 不需要的 **丢弃**.
+
+> 关于工作效率的探讨后面在介绍一些工具。
