修改 golang 链接, 添加界面框架

--- a/source/_posts/基本.md
+++ b/source/_posts/基本.md
@@ -8,23 +8,22 @@ tags: 基本
 >  在软件管理的领域里存在着被称作“依赖地狱”的死亡之谷，系统规模越大，加入的套件越多，你就越有可能在未来的某一天发现自己已深陷绝望之中。
 
 ## Api 设计
-* https://geemus.gitbooks.io/http-api-design/content/en/
-* https://github.com/ZhangBohan/http-api-design-ZH_CN
+* HTTP API 设计指南 [英文](https://geemus.gitbooks.io/http-api-design/content/en/) [中文](https://github.com/ZhangBohan/http-api-design-ZH_CN)
 
-## Typescript 中文
-* https://www.gitbook.com/book/oyyd/typescript-handbook-zh/details
+## Typescript 
+* [中文](https://www.gitbook.com/book/oyyd/typescript-handbook-zh/details)
 
-## ReactiveX/RxJava文档中文版
-* https://mcxiaoke.gitbooks.io/rxdocs/content/
+## ReactiveX
+* [RxJava文档中文版](https://mcxiaoke.gitbooks.io/rxdocs/content/)
 
 ## ES6
-* http://es6.ruanyifeng.com/
+* [阮一峰](http://es6.ruanyifeng.com/)
 
 ## Erlang
-* http://mbooks.me/LYEFGG/starting-out-for-real.html
+* [开始](http://mbooks.me/LYEFGG/starting-out-for-real.html)
 
-##  Google 的面试
-* https://github.com/jwasham/google-interview-university/blob/master/README-cn.md
+## 面试
+* [Google 面试](https://github.com/jwasham/google-interview-university/blob/master/README-cn.md)
 
-## http2 中英文对比翻译 
-* https://github.com/fex-team/http2-spec/blob/master/HTTP2%E4%B8%AD%E8%8B%B1%E5%AF%B9%E7%85%A7%E7%89%88(06-29).mdhttps://github.com/fex-team/http2-spec/blob/master/HTTP2%E4%B8%AD%E8%8B%B1%E5%AF%B9%E7%85%A7%E7%89%88(06-29).md
+## http2
+* [中英文对比翻译](https://github.com/fex-team/http2-spec/blob/master/HTTP2%E4%B8%AD%E8%8B%B1%E5%AF%B9%E7%85%A7%E7%89%88(06-29).mdhttps://github.com/fex-team/http2-spec/blob/master/HTTP2%E4%B8%AD%E8%8B%B1%E5%AF%B9%E7%85%A7%E7%89%88(06-29).md)
