调整博客文章内容

--- a/source/_posts/UI/界面框架.md
+++ b/source/_posts/UI/界面框架.md
@@ -1,9 +1,14 @@
-title: 界面框架
+title: UI 框架
 date: 2016-12-15 
 tags: ui
 ---
+自 bootstrap 出现后普通程序员也能写出满足普通需求的界面了。在此记录一些 css 框架 和通用主题。
 
-记录流行的界面框架或主题。
+## bootstrap
+bootstrap 4 默认采用 Flexbox 布局。
 
-* [A modern CSS framework based on Flexbox](http://bulma.io/)
-* [Mdl](https://getmdl.io/) md 设计实现
+## material
+* [`Mdl` md 设计实现的 css 库实现](https://getmdl.io/)
+
+## Flexbox
+* [`bulma` A modern CSS framework based on Flexbox](http://bulma.io/)
