--- a/source/_posts/基本.md
+++ b/source/_posts/基本.md
@@ -14,3 +14,5 @@ tags: 基本
 
 ## 面试
 * [Google 面试](https://github.com/jwasham/google-interview-university/blob/master/README-cn.md)
+
+* [中文技术文档的写作规范](https://github.com/ruanyf/document-style-guide)
