--- a/source/_posts/Asterisk/数据库集成.md
+++ b/source/_posts/Asterisk/数据库集成.md
@@ -3,17 +3,22 @@ date: 2016-11-7
 tags: Asterisk
 ---
 
-# Asterisk 与数据库集成 
+# asterisk 
+
+与数据库集成
+
 原文包含了两种系统( Ubuntu 与 RHEL )，两种数据库( MySQL 与 PostgreSQL )的使用介绍, 本文测试使用 Ubuntu 与 MySQL
 
 ## ubuntu 下安装 mysql
 
-## ubuntu 安装配置 ODBC
-```
- sudo aptitude install unixodbc unixodbc-dev libmyodbc (在 ubuntu 16.4 的版本中不能正常安装 libmyodbc)
- ```
+ ubuntu 上安装 mysql。
 
- 
- 
-# 参考链接 
- * https://www.datasunrise.com/how-to-install-the-mysql-odbc-driver-on-ubuntu-16-04/
+## ubuntu 安装配置 ODBC
+
+``` bash
+ sudo aptitude install unixodbc unixodbc-dev libmyodbc (在 ubuntu 16.4 的版本中不能正常安装 libmyodbc)
+```
+
+## 参考链接
+
+* [odbc 安装](https://www.datasunrise.com/how-to-install-the-mysql-odbc-driver-on-ubuntu-16-04/)
