--- a/source/_posts/UI/界面框架.md
+++ b/source/_posts/UI/界面框架.md
@@ -1,17 +1,19 @@
 title: UI 框架
-date: 2016-12-15 
+date: 2016-12-15
 tags: ui
 ---
-自 bootstrap 出现后普通程序员也能写出满足普通需求的界面了。在此记录一些 css 框架 和通用主题。
 
-## bootstrap
+bootstrap
+====
+
 bootstrap 4 默认采用 Flexbox 布局。
 
-## material
+material
+====
+
 * [`Mdl` md 设计实现的 css 库实现](https://getmdl.io/)
 
-## Flexbox
+Flexbox
+====
+
 * [`bulma` A modern CSS framework based on Flexbox](http://bulma.io/)
-
-
-基于 angular2 实现的 admin 界面**ng-admin**。
